# chess

./: .gitignore  Cargo.toml  README.md  log.txt  perf.data.old  pgn.rs
.github/workflows/: rust.yml
colosseum/: Cargo.toml
colosseum/src/: main.rs
src/: board.rs  eval.rs  lib.rs  main.rs  test.rs  uci.rs
src/game/: board.rs  chess_util.rs  eval.rs  mod.rs  move.rs  movegen.rs  pgn.rs  piece.rs
src/hash/: hashtable.rs  mod.rs  zobrist.rs
src/player/: alphabeta.rs  alphabetasearchplayer.rs  basicsearchplayer.rs  humanplayer.rs  iterativedeepening.rs  minimax.rs  minimaxsearchplayer.rs  mod.rs  player.rs  randommove.rs  randomplayer.rs  scoring.rs
src/simulator/: board.rs  chess_util.rs  eval.rs  mod.rs  piece.rs
tests/: test.rs
web/: index.html  lib.rs  main.js  style.css
