[package]
name = "chess"
version = "0.1.0"
edition = "2021"
description = "A UCI-compliant chess engine to suck away all my free time."
license = "MIT"
repository = "https://github.com/DecklynKern/chess"

[dependencies]
array-init = "2.0.1"

[dependencies.rand]
version = "0.8.5"
optional = true

[features]
default = ["random"]
random = ["dep:rand"]

[profile.dev]
opt-level = 1

[profile.release]
lto = true

[[bin]]
name = "engine"
path = "src/main.rs"